# lnd-rs

./: .gitignore  AGENTS.md  Cargo.toml  README.md  build.rs
docs/: architecture.md  getting-started.md
examples/: connect_saved.rs  derive_sid.rs  getinfo.rs  pair.rs  pair_save.rs
scripts/: update_protos.sh
src/: client.rs  config.rs  credentials.rs  lib.rs  proto.rs
src/transport/: direct.rs  mod.rs
src/transport/lncmailbox/: aezeed.rs  conn.rs  crypto.rs  gbn.rs  gbn_wire.rs  noise.rs  noise_conn.rs  noise_pattern.rs  sid.rs  ws.rs
src/transport/lncmailbox/noise_machine/: cipher_state.rs  machine.rs  mod.rs  symmetric_state.rs
src/transport/mailbox/: connect.rs  http2.rs  mod.rs  state.rs
tests/: pair_connect.rs
